--- a/src/Routes/navbar.module.css
+++ b/src/Routes/navbar.module.css
@@ -1,61 +1,64 @@
-body {
+* {
   margin: 0;
   padding: 0;
 }
-a {
-  text-decoration: none;
-  color: #1e1e23;
-  opacity: 1;
-  font-family: "work sans", sans serif;
-  font-size: 1.5em;
-  font-weight: 400;
-  transition: 200ms;
-}
-a:hover {
-  opacity: 0.5;
-}
-ul {
-  padding: 0;
-  list-style-type: none;
+
+body {
+  overflow-x: hidden;
 }
 
 nav {
   background-color: #1e1e23;
-  width: 100vw;
+  width: 100%;
   height: 65px;
 }
 
+a {
+  text-decoration: none;
+  color: #232323;
+  transition: color 0.3s ease;
+}
+
+a:hover {
+  color: #39acdb;
+}
+
 #menuToggle {
-  display: flex;
-  flex-direction: column;
-  position: relative;
+  display: block;
+  position: absolute;
   top: 25px;
-  left: 25px;
+  right: 25px;
   z-index: 1;
   -webkit-user-select: none;
   user-select: none;
 }
 
 #menuToggle input {
-  display: flex;
+  display: block;
   width: 40px;
   height: 32px;
   position: absolute;
+  top: -7px;
+  left: -5px;
   cursor: pointer;
-  opacity: 0;
-  z-index: 2;
+  opacity: 0; /* hide this */
+  z-index: 2; /* and place it over the hamburger */
+  -webkit-touch-callout: none;
 }
 
+/*
+  * Just a quick hamburger
+  */
 #menuToggle span {
-  display: flex;
-  width: 29px;
-  height: 2px;
+  display: block;
+  width: 33px;
+  height: 4px;
   margin-bottom: 5px;
   position: relative;
-  background: #ffffff;
+  background: #cdcdcd;
   border-radius: 3px;
   z-index: 1;
-  transform-origin: 5px 0px;
+  transform-origin: 4px 0px;
   transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
     background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
 }
@@ -68,47 +71,74 @@ nav {
   transform-origin: 0% 100%;
 }
 
+/* 
+  * Transform all the slices of hamburger
+  * into a crossmark.
+  */
 #menuToggle input:checked ~ span {
   opacity: 1;
-  transform: rotate(45deg) translate(-3px, -1px);
-  background: #36383f;
+  transform: rotate(45deg) translate(-2px, -1px);
+  background: #232323;
 }
+
+/*
+  * But let's hide the middle one.
+  */
 #menuToggle input:checked ~ span:nth-last-child(3) {
   opacity: 0;
   transform: rotate(0deg) scale(0.2, 0.2);
 }
 
+/*
+  * Ohyeah and the last one should go the other direction
+  */
 #menuToggle input:checked ~ span:nth-last-child(2) {
+  opacity: 1;
   transform: rotate(-45deg) translate(0, -1px);
 }
 
+/*
+  * Make this absolute positioned
+  * at the top left of the screen
+  */
 #menu {
-  position: absolute;
   display: flex;
   justify-content: center;
-  width: 100%;
-  height: 10px;
-  box-shadow: 0 0 10px #85888c;
-  margin: -50px 0 0 -50px;
-  padding: 40px;
-  background-color: #f5f6fa;
+  position: absolute;
+  width: 100vw;
+  height: 66px;
+  margin: -52px 75px 0 0;
+  font-family: "Roboto", sans-serif;
+  right: -100px;
+  background: #ededed;
+  list-style-type: none;
   -webkit-font-smoothing: antialiased;
+  /* to stop flickering of text in safari */
+
   transform-origin: 0% 0%;
-  transform: translate(-100%, 0);
+  transform: translate(100%, 0);
   transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
 }
 
-#innerMenu {
-  width: 50%;
-  display: flex;
-  flex-direction: row;
-}
-
 #menu li {
-  /* transition-delay: 2s; */
-  margin: auto;
+  padding-top: 20px;
+  font-size: 22px;
+  margin-right: 10px;
+  margin-left: 10px;
 }
 
+/*
+  * And let's fade it in from the left
+  */
 #menuToggle input:checked ~ ul {
   transform: none;
+  opacity: 1;
+}
+
+@media screen and (max-width: 768px) {
+  #menu {
+    transform: none;
+    opacity: 0;
+    transition: opacity 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+  }
 }
