--- a/src/Routes/navbar.module.css
+++ b/src/Routes/navbar.module.css
@@ -5,6 +5,8 @@
 
 body {
   overflow-x: hidden;
+  overflow-y: hidden;
+  font-family: "Roboto", sans-serif;
 }
 
 nav {
@@ -141,4 +143,12 @@ a:hover {
     opacity: 0;
     transition: opacity 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
   }
+}
+
+.container {
+  /* height: 100vh; */
+  /* margin-bottom: 20px; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
